fixing .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
-admin_username= exampleusername
-admin_password= examplepassword
+AUTHENTICATION_USERNAME=exampleusername
+AUTHENTICATION_PASSWORD=examplepassword
